EEC_InitBackup/src/objects/Document__c.object
<CustomObject>
    <description>A custom object to be used for non-Salesforce reference documents.</description>
    <fields>
        <fullName>Approved_for_Future_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Future Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>The file&apos;s content meta type.</description>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Type</label>
        <referenceTo>Document_Type__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes relating to the document.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_File_Name__c</fullName>
        <label>Original File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Date__c</fullName>
        <label>Out of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Doc_Type_required_if_future_usage_set</fullName>
        <active>true</active>
        <description>If the future usage checkbox is selected then ensure a doc type is available.</description>
        <errorConditionFormula>AND( Document_Type__c == NULL, Approved_for_Future_Usage__c != NULL)</errorConditionFormula>
        <errorMessage>Document Type is required if document is approved for future usage.</errorMessage>
    </validationRules>
</CustomObject>